--- a/fig1.ipynb
+++ b/fig1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = './'",
+    "root = './'\n",
     "auxdata = root+\"auxdata/\""
    ]
   },
