--- a/fig1.ipynb
+++ b/fig1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = 'C:/Users/yabec/Desktop/segregation_outputdata/github_data/'\n",
+    "root = './'\n",
     "auxdata = root+\"auxdata/\""
    ]
   },
