--- a/fig2.ipynb
+++ b/fig2.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# root = './'\n",
-    "root = 'C:/Users/yabec/Desktop/segregation_outputdata/github_data/'\n",
+    "root = './'\n",
     "auxdata = root+\"auxdata/\""
    ]
   },
