--- a/fig4.ipynb
+++ b/fig4.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strin = pd.read_csv(auxdata+\"stringency_fourstates_monthly.csv\")\n",
+    "strin = pd.read_csv(root+\"fig4/stringency_fourstates_monthly.csv\")\n",
     "strin['month'] = pd.to_datetime(strin['month'])"
    ]
   },
